<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regis2">

    <RelativeLayout
        android:id="@+id/card"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">
            <RelativeLayout
                android:id="@+id/content2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
                <TextView
                    android:gravity="center"
                    android:text="Datos Escolares"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Spinner
                        android:id="@+id/facultad"
                        android:layout_gravity="center"
                        android:layout_width="206dp"
                        android:layout_height="31dp"
                        android:layout_marginTop="40dp"/>
                    <Spinner
                        android:id="@+id/carrera"
                        android:layout_gravity="center"
                        android:layout_width="206dp"
                        android:layout_height="31dp"
                        android:layout_marginTop="10dp"/>
                    <Spinner
                        android:id="@+id/semestre"
                        android:layout_gravity="center"
                        android:layout_width="206dp"
                        android:layout_height="31dp"
                        android:layout_marginTop="10dp"/>
                    <EditText
                        android:id="@+id/cuenta"
                        android:layout_marginTop="10dp"
                        android:hint="@string/Cuenta"
                        android:layout_gravity="center"
                        android:inputType="number"
                        android:gravity="center"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/correo"
                        android:hint="@string/Correo"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_gravity="center"
                        app:passwordToggleEnabled="true"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/contraseña"
                            android:inputType="textPassword"
                            android:hint="@string/Contraseña"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_width="260dp"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:id="@+id/contraseña2"
                            android:hint="@string/Confirmar"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_width="260dp"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/registrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/redondearbordes"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="Registrarse"
                        android:textColor="#fff" />

                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <View
        android:id="@+id/barra"
        android:layout_below="@+id/card"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="5dp"
        android:background="@color/colorAccent"/>
    <TextView
        android:layout_below="@+id/card"
        android:gravity="center"
        android:text="Paso"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_below="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/first"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="43dp"
            android:background="@drawable/boton_redondo_blanco"
            android:layout_width="40dp"
            android:gravity="center"
            android:text="1"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="120dp"
            android:layout_height="40dp"/>

        <TextView
            android:layout_marginTop="43dp"
            android:background="@drawable/boton_redondo_naranja"
            android:layout_width="40dp"
            android:gravity="center"
            android:text="2"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_marginRight="120dp"
            android:layout_height="40dp"/>
    </RelativeLayout>


</RelativeLayout>